🧡bug: unable to expand/collapse folder

--- a/src/css/folderView/folderTree.css
+++ b/src/css/folderView/folderTree.css
@@ -48,7 +48,7 @@
     display: inline-block;
 
     width: 100%;
-    height: 22px;
+    height: 30px;
     margin-left: 6px;
 
     cursor: pointer;
@@ -78,7 +78,7 @@
     white-space: nowrap;
 
     font-size: 12px;
-    line-height: 22px;
+    line-height: 30px;
 }
 
 .is-root {
